Progress on study page

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 <body>
   <app ng-app="flash-card">
     <h5><br/><br/>this message will disappear when <em>app</em> component is correctly rendered<br/><br/><br/></h5>
+  <app ng-app="study-page"/>
   </app>
 
   <script src="./index.js" ></script>
