--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <header>
    <h1>Repeat.io</h1>
     <nav>
-      <ul>
+      <ul id="navBar">
         <li><a href="/">Home</a></li>
         <li><a href="/create">Create a deck</a></li>
         <li><a href="/edit">Edit a deck</a></li>
