Authentication Implemented, Including Encryption/Decryption of Passwords at Server

--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,12 @@
 </head>
 
 <body ng-app="flash-card">
+
   <header>
    <h1>Repeat.io</h1>
     <nav>
       <ul id="navBar">
-        <li><a href="/">Home</a></li>
+        <li><a href="/app">Home</a></li>
         <li><a href="/create">Create a deck</a></li>
         <li><a href="/login">Log out</a></li>
       </ul>
