Authentication Working With User Specific Data Rendering

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <title>Flashcards!</title>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
   <!-- Bootstrap requires jQuery for some things -->
   <script
@@ -22,7 +23,7 @@
 </head>
 
 <body ng-app="flash-card">
-  
+
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -60,7 +61,6 @@
 
   <script src="./index.js" ></script>
   <script src="./components/app.js" ></script>
-  <script src="./components/deckList.js"></script>
   <script src="./components/login.js"></script>
   <script src="./components/createPage.js"></script>
   <script src="./components/editPage.js"></script>
