--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a id="home-btn" href="/app">Home</a></li>
           <li><a id="create-btn" href="/create">Create a deck</a></li>
-          <li><a id="logout-btn" href="/login">Log out</a></li>
+          <li><a id="logout-btn" href="/">Log out</a></li>
         </ul>
       </div>
     </div>
