--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">Repeat.io</a>
+        <a class="navbar-brand" href="/app">Repeat.io</a>
       </div>
 
       <div class="collapse navbar-collapse" id="my-navbar">
