--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/app">Repeat.io</a>
+        <a id="logo" class="navbar-brand" href="/app">Repeat.io</a>
       </div>
 
       <div class="collapse navbar-collapse" id="my-navbar">
@@ -49,8 +49,6 @@
 
   <div ng-view></div>
 
-
-
   <script type="text/javascript">
     // This function causes the menu to collapse correctly
     // on small screens
@@ -60,21 +58,49 @@
       });
       localStorage.clear();
     });
-
-
     //listeners for global navigation buttons:
+    var warning = 'You\'re not logged in but feel free to play around. Your decks will not be saved to your account, but will be available publicly to all unregistered users.';
+    var serverURL = 'http://localhost:3000/decks';
+    var serverCall = function(callback) {
+      $.ajax({
+        url: serverURL,
+        type: 'GET',
+        data: {
+          username: 'null'
+        },
+        success: function(data) {
+          callback(data);
+        }
+      });
+    };
+
+    $('#logo').on('click', function() {
+      if (localStorage.length === 0) {
+        alert(warning);
+        serverCall(function(data) {
+          console.log('inside serverCall', data);
+          localStorage.setItem('decks', JSON.stringify(data));
+        });
+      }
+    });
     $('#home-btn').on('click', function() {
       if (localStorage.length === 0) {
-        alert('you\'re not logged in currently but feel free to play around. your decks will not be saved to your account, but will be available to all unregistered users.');
+        alert(warning);
+        serverCall(function(data) {
+          console.log('inside serverCall', data);
+          localStorage.setItem('decks', JSON.stringify(data));
+        });
       }
     });
-
     $('#create-btn').on('click', function() {
       if (localStorage.length === 0) {
-        alert('you\'re not logged in currently but feel free to play around. your decks will not be saved to your account, but will be available to all unregistered users.');
+        alert(warning);
+        serverCall(function(data) {
+          console.log('inside serverCall', data);
+          localStorage.setItem('decks', JSON.stringify(data));
+        });
       }
     });
-
     $('#logout-btn').on('click', function() {
       localStorage.clear();
     });
