Slight changes to alert messages on for unregistered users

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
       localStorage.clear();
     });
     //listeners for global navigation buttons:
-    var warning = 'You\'re not logged in but feel free to play around. Your decks will not be saved to your account, but will be available publicly to all unregistered users.';
+    var warning = 'You\'re not logged in, but feel free to play around. Decks you create will not be saved to your account. Instead, they will be available publicly to all unregistered users.';
     var serverURL = 'http://localhost:3000/decks';
     var serverCall = function(callback) {
       $.ajax({
