--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
       <div class="collapse navbar-collapse" id="my-navbar">
         <ul class="nav navbar-nav navbar-right">
           <li><a id="home-btn" href="/app">Home</a></li>
-          <li><a id="create-btn" href="/create">Create a deck</a></li>
+          <li><a id="create-btn" href="/create">Create a new deck</a></li>
           <li><a id="logout-btn" href="/">Log out</a></li>
         </ul>
       </div>
